updating paper swatch

--- a/paper/_variables.scss
+++ b/paper/_variables.scss
@@ -11,7 +11,7 @@ $gray-base:              #000 !default;
 $gray-darker:            lighten($gray-base, 13.5%) !default; // #222
 $gray-dark:              #212121 !default;
 $gray:                   #666 !default;
-$gray-light:             #bbb !default;
+$gray-light:             #ddd !default;
 $gray-lighter:           lighten($gray-base, 93.5%) !default; // #eee
 
 $brand-primary:         #2196F3 !default;
@@ -52,11 +52,11 @@ $font-size-base:          13px !default;
 $font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
 $font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
 
-$font-size-h1:            56px !default;
-$font-size-h2:            45px !default;
-$font-size-h3:            34px !default;
-$font-size-h4:            24px !default;
-$font-size-h5:            20px !default;
+$font-size-h1:            45px !default;
+$font-size-h2:            34px !default;
+$font-size-h3:            24px !default;
+$font-size-h4:            20px !default;
+$font-size-h5:            16px !default;
 $font-size-h6:            14px !default;
 
 //** Unit-less `line-height` for use in components like buttons.
@@ -181,9 +181,9 @@ $btn-border-radius-small:        $border-radius-small !default;
 //##
 
 //** `<input>` background color
-$input-bg:                       transparent !default;
+$input-bg:                       #f9f9f9 !default;
 //** `<input disabled>` background color
-$input-bg-disabled:              transparent !default;
+$input-bg-disabled:              #f9f9f9 !default;
 
 //** Text color for `<input>`s
 $input-color:                    $gray !default;
@@ -486,7 +486,7 @@ $pager-disabled-color:                 $pagination-disabled-color !default;
 
 $jumbotron-padding:              30px !default;
 $jumbotron-color:                inherit !default;
-$jumbotron-bg:                   #f9f9f9 !default;
+$jumbotron-bg:                   #f5f5f5 !default;
 $jumbotron-heading-color:        $headings-color !default;
 $jumbotron-font-size:            ceil(($font-size-base * 1.5)) !default;
 $jumbotron-heading-font-size:    ceil(($font-size-base * 4.5)) !default;
@@ -760,7 +760,7 @@ $thumbnail-caption-padding:   9px !default;
 //
 //##
 
-$well-bg:                     #f9f9f9 !default;
+$well-bg:                     #f5f5f5 !default;
 $well-border:                 transparent !default;
 
 
@@ -788,13 +788,13 @@ $badge-border-radius:         10px !default;
 //##
 
 $breadcrumb-padding-vertical:   8px !default;
-$breadcrumb-padding-horizontal: 15px !default;
+$breadcrumb-padding-horizontal: 0 !default;
 //** Breadcrumb background color
-$breadcrumb-bg:                 #f5f5f5 !default;
+$breadcrumb-bg:                 transparent !default;
 //** Breadcrumb text color
 $breadcrumb-color:              #ccc !default;
 //** Text color of current page in the breadcrumb
-$breadcrumb-active-color:       $gray-light !default;
+$breadcrumb-active-color:       $gray !default;
 //** Textual separator for between breadcrumb elements
 $breadcrumb-separator:          "/" !default;
 
