--- a/paper/_bootswatch.scss
+++ b/paper/_bootswatch.scss
@@ -65,7 +65,6 @@
   border-right: none;
   border-bottom: none;
   @include box-shadow(1px 1px 2px rgba(0,0,0,.3));
-  @include transition(all 0.2s);
 
   &-link {
     @include box-shadow(none);
@@ -119,8 +118,8 @@ button {
   text-rendering: optimizeLegibility;
 }
 
-a {
-  @include transition(all 0.2s);
+.breadcrumb > .active {
+    color: $gray;
 }
 
 // Tables =====================================================================
@@ -131,6 +130,12 @@ a {
   > tbody > tr > td {
     @include transition(all 0.2s);
   }
+}
+
+table.table tr {
+    td, th {
+        vertical-align: middle;
+    }
 }
 
 // Forms ======================================================================
@@ -151,21 +156,21 @@ input[type=number],
 [type=email].form-control,
 [type=tel].form-control,
 [contenteditable].form-control {
-  padding: 0;
-  border: none;
-  border-radius: 0;
+  padding: 0.5em;
+  border: 2px solid $gray-light;
+  border-radius: 5px;
   -webkit-appearance: none;
-  @include box-shadow(inset 0 -1px 0 #ddd);
   font-size: 16px;
-
+  transition: none;
+  
   &:focus {
-    @include box-shadow(inset 0 -2px 0 $brand-primary);
+    border-color: $brand-primary;
+    box-shadow: none;
   }
 
   &[disabled],
   &[readonly] {
-    @include box-shadow(none);
-    border-bottom: 1px dotted #ddd;
+    border-style: solid;
   }
 
   &.input {
@@ -181,20 +186,21 @@ input[type=number],
 
 select,
 select.form-control {
-  border: 0;
-  border-radius: 0;
+  border: 2px solid $gray-light;
+  border-radius: 5px;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  padding-left: 0;
+  padding-left: 5px;
   padding-right: 0\9; // remove padding for < ie9 since default arrow can't be removed
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAMAAACelLz8AAAAJ1BMVEVmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmaP/QSjAAAADHRSTlMAAgMJC0uWpKa6wMxMdjkoAAAANUlEQVR4AeXJyQEAERAAsNl7Hf3X6xt0QL6JpZWq30pdvdadme+0PMdzvHm8YThHcT1H7K0BtOMDniZhWOgAAAAASUVORK5CYII=);
   background-size: 13px;
   background-repeat: no-repeat;
   background-position: right center;
-  @include box-shadow(inset 0 -1px 0 #ddd);
+  border: 2px solid $gray-light;
   font-size: 16px;
   line-height: 1.5;
+  box-shadow: none;
 
   &::-ms-expand {
     display: none;
@@ -211,13 +217,26 @@ select.form-control {
   }
 
   &:focus {
-    @include box-shadow(inset 0 -2px 0 $brand-primary);
+    border-color: $brand-primary;
     background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAMAAACelLz8AAAAJ1BMVEUhISEhISEhISEhISEhISEhISEhISEhISEhISEhISEhISEhISEhISF8S9ewAAAADHRSTlMAAgMJC0uWpKa6wMxMdjkoAAAANUlEQVR4AeXJyQEAERAAsNl7Hf3X6xt0QL6JpZWq30pdvdadme+0PMdzvHm8YThHcT1H7K0BtOMDniZhWOgAAAAASUVORK5CYII=);
   }
 
   &[multiple] {
     background: none;
   }
+}
+
+.form-control:focus + .input-group-addon, .input-group-addon.focus {
+  background-color: $brand-primary;
+  border-color: $brand-primary;
+  color: #ffffff;
+}
+
+
+.input-group-addon {
+    background-color: $gray-lighter;
+    border: 2px solid $gray-light;
+    border-radius: 5px;
 }
 
 .radio,
@@ -352,7 +371,12 @@ input[type="checkbox"],
   .form-control,
   input:not([type=checkbox]):focus,
   .form-control:focus {
-    @include box-shadow(inset 0 -2px 0 $brand-warning);
+    box-shadow: none;
+    border-color: $brand-warning;
+  }
+  .form-control:focus + .input-group-addon {
+      background-color: $brand-warning;
+      color: #ffffff;
   }
 }
 
@@ -361,7 +385,11 @@ input[type="checkbox"],
   .form-control,
   input:not([type=checkbox]):focus,
   .form-control:focus {
-    @include box-shadow(inset 0 -2px 0 $brand-danger);
+    border-color: $brand-danger;
+  }
+  .form-control:focus + .input-group-addon {
+      background-color: $brand-danger;
+      color: #ffffff;
   }
 }
 
@@ -370,13 +398,18 @@ input[type="checkbox"],
   .form-control,
   input:not([type=checkbox]):focus,
   .form-control:focus {
-    @include box-shadow(inset 0 -2px 0 $brand-success);
+    border-color: $brand-success;
+  }
+  .form-control:focus + .input-group-addon {
+      background-color: $brand-success;
+      color: #ffffff;
   }
 }
 
 // Navs =======================================================================
 
 .nav-tabs {
+  border-color: $gray-light;
   > li > a,
   > li > a:focus {
     margin-right: 0;
@@ -384,7 +417,6 @@ input[type="checkbox"],
     border: none;
     color: $navbar-default-link-color;
     @include box-shadow(inset 0 -1px 0 #ddd);
-    @include transition(all 0.2s);
 
     &:hover {
       background-color: transparent;
@@ -524,7 +556,6 @@ input[type="checkbox"],
   font-weight: 300;
   line-height: 24px;
   opacity: 0.6;
-  @include transition(all 0.2s);
 
   &:hover {
     opacity: 1;
