--- a/paper/_bootswatch.scss
+++ b/paper/_bootswatch.scss
@@ -245,6 +245,7 @@ select.form-control {
     background-color: $gray-lighter;
     border: 2px solid $gray-light;
     border-radius: 5px;
+    padding:  6px 10px;
 }
 
 .radio,
