--- a/paper/bootstrap.css
+++ b/paper/bootstrap.css
@@ -7786,6 +7786,7 @@ select.form-control[multiple] {
   background-color: #eeeeee;
   border: 2px solid #ddd;
   border-radius: 5px;
+  padding: 6px 10px;
 }
 
 .radio label,
