--- a/paper/_variables.scss
+++ b/paper/_variables.scss
@@ -183,7 +183,7 @@ $btn-border-radius-small:        $border-radius-small !default;
 //** `<input>` background color
 $input-bg:                       #f9f9f9 !default;
 //** `<input disabled>` background color
-$input-bg-disabled:              #f9f9f9 !default;
+$input-bg-disabled:              #eeeeee !default;
 
 //** Text color for `<input>`s
 $input-color:                    $gray !default;
