--- a/paper/_bootswatch.scss
+++ b/paper/_bootswatch.scss
@@ -164,7 +164,7 @@ input[type=number],
 [type=email].form-control,
 [type=tel].form-control,
 [contenteditable].form-control {
-  padding: 0.5em;
+  padding: 0 0.5em;
   border: 2px solid $gray-light;
   border-radius: 5px;
   -webkit-appearance: none;
